refactor: ReplyService dto로 리팩토링